# Copyright (C) 2021 Paolo Jovon <paolo.jovon@gmail.com>
# SPDX-License-Identifier: Apache-2.0

[package]
name = "libktx-rs-macros"
version = "0.1.0"
edition = "2018"

authors = ["Paolo Jovon <paolo.jovon@gmail.com>"]
description = "Utility macros for libktx_rs tests"
repository = "https://github.com/UberLambda/libktx-rs"
license = "Apache-2.0"

publish = false

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "^0.3"
proc-macro2 = "^1.0"
quote = "^1.0"
syn = { version = "^1.0", features = ["full"] }