# Copyright (C) 2021 Paolo Jovon <paolo.jovon@gmail.com>
# SPDX-License-Identifier: Apache-2.0

[package]
name = "libktx-rs-sys"
version = "0.1.0"
edition = "2018"
authors = ["Paolo Jovon <paolo.jovon@gmail.com>"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build/build.rs"

[features]
# Link libstdc++. Required on Linux if using `CXX=g++`.
# Alternatively, for full-LLVM builds (recommended):
# 1. Set `CC=clang`, `CXX=clang++` to replace GCC with Clang
# 2. Set `CXXSTDLIB=stdc++` to use clang's libc++
# 3. Copy https://github.com/bevyengine/bevy/blob/main/.cargo/config_fast_builds to use clang instead of gcc as a linker
"link-libstdc++" = []

# Run bindgen as part of the build process?
"run-bindgen" = ["bindgen"]

# Support software ETC unpacking?
# >>> Enabling this feature makes a non-open-source file be compiled along with the library! <<<
# This is disabled by default to be able to ship this library as Apache-2.0.
"nonfree-etc-unpack" = []

[dependencies]
log = { version = "^0.4" }

[build-dependencies]
cc = { version = "^1.0", features = ["parallel"] }
bindgen = { version = "^0.58", optional = true }
