# Copyright (C) 2021 Paolo Jovon <paolo.jovon@gmail.com>
# SPDX-License-Identifier: Apache-2.0

[package]
name = "libktx-rs-sys"
version = "0.2.44"
edition = "2018"

description = "A low-level wrapper over https://github.com/KhronosGroup/KTX-Software."
repository = "https://github.com/UberLambda/libktx-rs"
readme = "../README.md"
keywords = ["ktx", "texture", "image", "graphics", "bindings"]
categories = ["external-ffi-bindings", "graphics"]
authors = ["Paolo Jovon <paolo.jovon@gmail.com>"]
license = "Apache-2.0"

include = [
    "/Cargo.toml",
    "/../.gitmodules",
    "/../README.md",
    "/../LICENSE",
    "/src/*.rs",
    # Build script and wrapper
    "/build/*.rs",
    "/build/*.c",
    "/build/*.h",
    # KTX-Software submodule (only relevant files)
    "/build/KTX-Software/lib/**/*.c",
    "/build/KTX-Software/lib/**/*.cc",
    "/build/KTX-Software/lib/**/*.c[px+][px+]",
    "/build/KTX-Software/lib/**/*.h",
    "/build/KTX-Software/lib/**/*.hh",
    "/build/KTX-Software/lib/**/*.h[px+][px+]",
    "/build/KTX-Software/lib/**/*.in[cl]",
    "/build/KTX-Software/include/**",
    "/build/KTX-Software/other_include/**",
    "/build/KTX-Software/utils/**",
]
build = "build/build.rs"
links = "ktx"

[features]
default = ["write"]

# Link libstdc++. Required on Linux if using `CXX=g++`.
# Alternatively, for full-LLVM builds (recommended):
# 1. Set `CC=clang`, `CXX=clang++` to replace GCC with Clang
# 2. Set `CXXSTDLIB=stdc++` to use clang's libc++
# 3. Copy https://github.com/bevyengine/bevy/blob/main/.cargo/config_fast_builds to use clang instead of gcc as a linker
"link-libstdc++" = []

# Run bindgen as part of the build process?
"run-bindgen" = ["bindgen"]

# Support KTX_FEATURE_WRITE? (Writing to KTXs)
"write" = []

# Support software ETC unpacking?
# >>> Enabling this feature makes a non-open-source file be compiled along with the library! <<<
# This is disabled by default to be able to ship this library as Apache-2.0.
"nonfree-etc-unpack" = []

[dependencies]
log = { version = "^0.4" }

[build-dependencies]
cc = { version = "^1.0", features = ["parallel"] }
bindgen = { version = "^0.58", optional = true }
