# Copyright (C) 2021 Paolo Jovon <paolo.jovon@gmail.com>
# SPDX-License-Identifier: Apache-2.0

[package]
name = "libktx-rs-sys"
version = "0.3.0+v4.0.0"
edition = "2018"

description = "A low-level wrapper over https://github.com/KhronosGroup/KTX-Software."
repository = "https://github.com/UberLambda/libktx-rs"
readme = "../README.md"
keywords = ["ktx", "texture", "image", "graphics", "bindings"]
categories = ["external-ffi-bindings", "graphics"]
authors = ["Paolo Jovon <paolo.jovon@gmail.com>"]
license = "Apache-2.0"

include = [
    "/Cargo.toml",
    "/../.gitmodules",
    "/../README.md",
    "/../LICENSE",
    "/src/*.rs",
    # Build script and wrapper
    "/build/*.rs",
    "/build/*.c",
    "/build/*.h",
    "/build/*.cmake",
    # KTX-Software submodule (only relevant files)
    # -- CMake and required resources
    "/build/KTX-Software/**/*.txt",
    "/build/KTX-Software/**/*.cmake",
    "/build/KTX-Software/**/*.rtf",
    # -- Build scripts
    "/build/KTX-Software/**/*.sh",
    "/build/KTX-Software/**/*.p[yl]",
    "/build/KTX-Software/lib/mkvkformatfiles",
    # -- Emscripten
    "/build/KTX-Software/**/*.js",
    "/build/KTX-Software/**/*.htm?",
    # -- Sources and headers
    "/build/KTX-Software/**/*.c",
    "/build/KTX-Software/**/*.cc",
    "/build/KTX-Software/**/*.c[px+][px+]",
    "/build/KTX-Software/**/*.h",
    "/build/KTX-Software/**/*.hh",
    "/build/KTX-Software/**/*.h[px+][px+]",
    "/build/KTX-Software/**/*.in[cl]",
    "/build/KTX-Software/include/**",
    "/build/KTX-Software/other_include/**",
    "/build/KTX-Software/utils/**",
]
build = "build/build.rs"
links = "ktx"

[features]
default = ["static", "write"]

# Compile libktx as a static library? 
"static" = []

# Run bindgen as part of the build process?
"run-bindgen" = ["bindgen"]

# Support KTX_FEATURE_WRITE? (Writing to KTXs)
"write" = []

# Support software ETC unpacking?
# >>> Enabling this feature makes a non-open-source file be compiled along with the library! <<<
# This is disabled by default to be able to ship this library as Apache-2.0.
"nonfree-etc-unpack" = []

[dependencies]
log = "0.4.14"

[build-dependencies]
bindgen = { version = "0.59.0", optional = true }
cmake = "0.1.45"
glob = "0.3.0"
