# Copyright (C) 2021 Paolo Jovon <paolo.jovon@gmail.com>
# SPDX-License-Identifier: Apache-2.0

[package]
name = "libktx-rs"
version = "0.1.0"
edition = "2018"
authors = ["Paolo Jovon <paolo.jovon@gmail.com>"]
license = "Apache-2.0"

description = "Reading, writing and transcoding of Khronos Textures (KTX1 and KTX2)."
keywords = ["ktx", "texture", "image", "graphics", "bindings"]
categories = ["api-bindings", "graphics"]

include = [
    "Cargo.toml",
    "../.gitmodules",
    "../README.md",
    "../LICENSE",
    "src/*.rs",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
"default" = ["write"]

# Enable tests that use the images in `libktx-rs-sys/build/KTX-Software/tests`.
# Note that the KTX-Software submodule should be cloned with git-lfs!
"test-images" = []

# Support writing to KTXs as well?
"write" = ["libktx-rs-sys/write"]

[dependencies]
libktx-rs-sys = { path = "../libktx-rs-sys", version = "0.1.0" }
bitflags = "^1.2"

[dev-dependencies]
libktx-rs-macros = { path = "../libktx-rs-macros", version = "0.1.0" }